# matrix-rain

./: .gitignore  CNAME  DEPLOY.md  README.md  compose.yml  index.html  pyproject.toml  pyscript.toml
.github/workflows/: docs.yml
docker/: Dockerfile
docs/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/.doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_modules/: index.html
docs/_modules/matrix_rain/: config.html
docs/_sources/: api.rst.txt  index.rst.txt
docsrc/source/: conf.py  installation.rst  usage.rst
src/matrix_rain/: matrix.py
test/unit/: test_config.py  test_matrix.py
